updated reading title

--- a/3_Lexical_Closure/index.html
+++ b/3_Lexical_Closure/index.html
@@ -43,6 +43,7 @@
         
         document.getElementById('red').onclick = buttonHandler('red');
         document.getElementById('green').onclick = buttonHandler('green');
+        document.getElementById('green').onclick = buttonHandler('green');
         
         </script>
         <script>
